--- a/BlazorTool.Client/Resources/UIStrings.resx
+++ b/BlazorTool.Client/Resources/UIStrings.resx
@@ -782,4 +782,7 @@
   <data name="Spoiler_Hide" xml:space="preserve">
     <value>Hide</value>
   </data>
+  <data name="Home_WorkOrdersWithPerson" xml:space="preserve">
+    <value>Orders with my activities</value>
+  </data>
 </root>
