Enhance activity display and user interface features
Updated `ActivityDisplay.razor` to convert activity descriptions to HTML and added `isExternalWindow` parameter for styling. Modified CSS for better overflow management.

Refactored `ActivityList.razor` to conditionally render the activity list header and introduced a new window for displaying activities based on the `isExternalWindow` parameter.

Added a new context menu item in `Home.razor` for opening orders, improving user options based on permissions.

Updated localization files to include translations for the new "Show activities in window" feature.

--- a/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
+++ b/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
@@ -781,4 +781,7 @@
   <data name="Home_WorkOrdersWithPerson" xml:space="preserve">
     <value>Zlecenia z moimi aktywnościami</value>
   </data>
+  <data name="ShowActivities" xml:space="preserve">
+    <value>Pokaż aktywności w oknie</value>
+  </data>
 </root>
