docs: Update CHANGELOGs and minor adjustments
This commit updates the CHANGELOG.md and CHANGELOG_PL.md files to reflect the newly implemented device management features. It also includes minor adjustments to other files that were not part of the initial commit.

Changes for developers:
- Updated `CHANGELOG.md` and `CHANGELOG_PL.md` with entries for device management features.
- Minor adjustments to `BlazorTool.Client/Pages/DevicesPage.razor`, `BlazorTool.Client/Resources/UIStrings.pl-PL.resx`, `BlazorTool.Client/Resources/UIStrings.resx`, `BlazorTool.Client/Services/ApiServiceClient.cs`, `BlazorTool.Client/wwwroot/buildinfo.txt`, and `BlazorTool/Controllers/DeviceController.cs` that were not included in the previous commit.

Changes for users (UI and functionality):
- No direct user-facing changes in this commit, as the main feature was committed previously. This commit primarily updates documentation and synchronizes file states.

--- a/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
+++ b/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
@@ -882,6 +882,7 @@
   </data>
   <data name="NavMenu_Devices" xml:space="preserve">
     <value>Urządzenia</value>
+  </data>
   <data name="WorkOrderFiles_Title" xml:space="preserve">
     <value>Pliki zlecenia</value>
   </data>
