feat: Implement comprehensive device management features
This commit introduces a new set of features for managing devices within the application.

- **New DeviceDisplay Component:** Added `DeviceDisplay.razor` and `DeviceDisplay.razor.css` for a dedicated UI to present device information.
- **Devices Page Enhancements:** Updated `DevicesPage.razor` to integrate the new `DeviceDisplay` component and improve the overall device-related user interface.
- **API Client Updates:** Modified `ApiServiceClient.cs` to include new methods for interacting with device-specific API endpoints.
- **Server-Side Device Controller:** Updated `DeviceController.cs` with new or modified endpoints to support device management operations.
- **Localization:** Added new UI strings for English and Polish in `UIStrings.Designer.cs`, `UIStrings.pl-PL.resx`, and `UIStrings.resx` to support the new device features.

Other:
- Updated `.gitignore` to include new ignore patterns.
- `buildinfo.txt` was updated automatically.

--- a/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
+++ b/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
@@ -922,4 +922,14 @@
   <data name="WorkOrderFiles_NonImageFileClick" xml:space="preserve">
     <value>Kliknięcie pliku niebędącego obrazem</value>
   </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="BackToList" type="System.Resources.ResXNullRef, System.Windows.Forms">
+    <value />
+  </data>
+  <data name="DeviceDetails_Title" xml:space="preserve">
+    <value>Szczegóły urządzenia</value>
+  </data>
+  <data name="DeviceDetails_NoDeviceSelected" xml:space="preserve">
+    <value>Nie wybrano urządzenia.</value>
+  </data>
 </root>
