--- a/BlazorTool.Client/Resources/UIStrings.resx
+++ b/BlazorTool.Client/Resources/UIStrings.resx
@@ -928,4 +928,13 @@
   <data name="WorkOrderFiles_NonImageFileClick" xml:space="preserve">
     <value>Non-image file click</value>
   </data>
+  <data name="BackToList" xml:space="preserve">
+    <value>Back to list</value>
+  </data>
+  <data name="DeviceDetails_Title" xml:space="preserve">
+    <value>Device Details</value>
+  </data>
+  <data name="DeviceDetails_NoDeviceSelected" xml:space="preserve">
+    <value>No device selected.</value>
+  </data>
 </root>
